# CareOrchestra

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
apps/adk_app/: __init__.py  app.py  config.py
apps/adk_app/agents/: Symptoms_agent.py  analysis.py  coordinator.py  escalation.py  medication.py  monitoring.py  reporting.py  vitals.py
apps/adk_app/prompts/: __init__.py
apps/adk_app/schemas/: __init__.py  alert.py  appointment.py  medication.py  patient.py  vitals.py
apps/adk_app/services/: alert_service.py  medication_service.py  patient_service.py  scheduler_service.py  vitals_service.py
apps/adk_app/tools/: __init__.py  mcp_integration.py
apps/adk_app/tools/bigquery_tools/: __init__.py  client.py  mutations.py  queries.py
apps/adk_app/tools/calendar_tools/: __init__.py  scheduler.py
apps/adk_app/tools/formatter/: __init__.py  alert_formatter.py  report_formatter.py
apps/adk_app/tools/gmail_tools/: __init__.py  alert_sender.py
apps/adk_app/tools/risk_rules/: __init__.py  medication_rules.py  vitals_rules.py
apps/api/: README.md  main.py
data/mock_payloads/: followup_needed.json  high_bp_event.json  missed_medication.json
data/seed/: alerts.csv  appointments.csv  medication_logs.csv  medications.csv  patients.csv  vitals.csv
docs/: agent_responsibilities.md  architecture.md  bigquery_schema.md  demo_script.md  workflows.md
frontend/: README.md
infra/: README.md
mcp/toolbox/: README.md
tests/: __init__.py  conftest.py
